update urls for css/js

--- a/utilities/stream-popup/display.html
+++ b/utilities/stream-popup/display.html
@@ -10,7 +10,7 @@
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-TPQNM8CC');</script>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
     
 </head>
 <body>
@@ -19,6 +19,6 @@
         
     </div>
 
-    <script src="js/popup-display.js"></script>
+    <script src="./js/popup-display.js"></script>
 </body>
 </html>
