--- a/index.html
+++ b/index.html
@@ -7827,3 +7827,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
