--- a/utilities/readme-generator/index.html
+++ b/utilities/readme-generator/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dynamic README Builder</title>
+    <title>Dynamic README Builder | Boost Your GitHub Profile</title>
+    <meta name="description" content="Craft eye-catching READMEs with badges, GIFs, and metrics. Perfect for GitHub profiles!">
+    <meta name="keywords" content="README generator, GitHub profile, badges, GIFs, metrics, Markdown, dynamic README, open source, developer tools">
     <link rel="stylesheet" href="/assets/css/generator-style.css">
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/dompurify@2.3.8/dist/purify.min.js"></script>
