--- a/utilities/readme-builder/index.html
+++ b/utilities/readme-builder/index.html
@@ -13,55 +13,55 @@
 <body>
     <header>
         <h1>🚀 Dynamic README Builder</h1>
-        <p>Создавайте уникальные и информативные README.md!</p>
+        <p>Create unique and informative README.md!</p>
     </header>
 
     <main class="container">
         <section class="editor-pane">
-            <h2>Редактор Контента</h2>
+            <h2>Content Editor</h2>
 
             <!-- Заголовок проекта -->
             <div class="form-group static-block">
-                <label for="projTitle">Название проекта:</label>
-                <input type="text" id="projTitle" placeholder="Мой Потрясающий Проект">
+                <label for="projTitle">Project name:</label>
+                <input type="text" id="projTitle" placeholder="My Amazing Project">
             </div>
 
             <!-- Конструктор Бейджей (РАСШИРЕННЫЙ СПИСОК) -->
             <fieldset class="form-group badge-adder static-block">
-                <legend>Конструктор Бейджей</legend>
+                <legend>Badge Designer</legend>
                 <div class="form-group">
-                    <label for="badgeTypeSelector">Шаблон бейджа:</label>
+                    <label for="badgeTypeSelector">Badge Template:</label>
                     <select id="badgeTypeSelector">
-                        <option value="">-- Выберите шаблон --</option>
+                        <option value="">-- Select a template --</option>
                         <optgroup label="Основные">
-                            <option value="simple">Простой (Static)</option>
-                            <option value="custom_url">Своя URL Картинки</option>
+                            <option value="simple">Static</option>
+                            <option value="custom_url">Own Image URL</option>
                         </optgroup>
                         <optgroup label="GitHub">
-                            <option value="github_license">Лицензия</option>
-                            <option value="github_actions">Статус Actions</option>
+                            <option value="github_license">License</option>
+                            <option value="github_actions">Actions status</option>
                             <option value="github_issues">Issues</option>
                             <option value="github_prs">Pull Requests</option>
                             <option value="github_stars">Stars</option>
                             <option value="github_forks">Forks</option>
                             <option value="github_watchers">Watchers</option>
-                            <option value="github_last_commit">Последний коммит</option>
-                            <option value="github_release">Последний релиз</option>
-                            <option value="github_contributors">Контрибьюторы</option>
-                            <option value="github_repo_size">Размер репозитория</option>
-                            <option value="github_downloads">Загрузки релиза</option>
+                            <option value="github_last_commit">Last commit</option>
+                            <option value="github_release">Latest release</option>
+                            <option value="github_contributors">Contributors</option>
+                            <option value="github_repo_size">Repository size</option>
+                            <option value="github_downloads">Release Downloads</option>
                         </optgroup>
                          <optgroup label="NPM">
-                            <option value="npm_version">Версия</option>
-                            <option value="npm_downloads_m">Загрузки (месяц)</option>
-                            <option value="npm_downloads_w">Загрузки (неделя)</option>
-                            <option value="npm_downloads_y">Загрузки (год)</option>
-                            <option value="npm_license">Лицензия</option>
-                            <option value="bundlephobia_minzip">Размер (minzip)</option>
-                            <option value="bundlephobia_min">Размер (min)</option>
+                            <option value="npm_version">Version</option>
+                            <option value="npm_downloads_m">Downloads (month)</option>
+                            <option value="npm_downloads_w">Downloads (week)</option>
+                            <option value="npm_downloads_y">Downloads (year)</option>
+                            <option value="npm_license">License</option>
+                            <option value="bundlephobia_minzip">Size (minzip)</option>
+                            <option value="bundlephobia_min">Size (min)</option>
                          </optgroup>
                          <optgroup label="Качество и CI/CD">
-                             <option value="codecov">Codecov Покрытие</option>
+                             <option value="codecov">Codecov Coverage</option>
                              <option value="codefactor">CodeFactor Grade</option>
                              <option value="sonar_quality">SonarQube Quality Gate</option>
                              <option value="travis_ci">Travis CI</option>
@@ -69,8 +69,8 @@
                              <!-- Можно добавить Jenkins, GitLab CI и др. через Custom URL -->
                          </optgroup>
                           <optgroup label="Размер и Зависимости">
-                             <option value="dep_status">David DM (Зависимости)</option>
-                             <option value="dep_dev_status">David DM (Dev Зависимости)</option>
+                             <option value="dep_status">David DM (Dependencies)</option>
+                             <option value="dep_dev_status">David DM (Dev Dependencies)</option>
                              <option value="snyk_vulnerabilities">Snyk Vulnerabilities</option>
                           </optgroup>
                          <optgroup label="Социальные и Поддержка">
@@ -86,32 +86,32 @@
                     </select>
                 </div>
                 <div id="badgeParamsContainer" class="form-group">
-                    <p><i>Выберите шаблон, чтобы увидеть параметры.</i></p>
+                    <p><i>Select a template to see the options.</i></p>
                 </div>
-                <button type="button" id="addBadgeButton" class="button-add-badge" disabled>Добавить Бейдж в список</button>
+                <button type="button" id="addBadgeButton" class="button-add-badge" disabled>Add a badge to the list</button>
             </fieldset>
             <div class="form-group static-block">
-                <label for="addedBadgesArea">Бейджи (Markdown):
-                     <span class="tooltip-trigger" tabindex="0">Подсказка<div class="tooltip-content">Используются <a href="https://shields.io/badges/" target="_blank">Баджи SHILDS.IO</a></div></span>
+                <label for="addedBadgesArea">Badges (Markdown):
+                     <span class="tooltip-trigger" tabindex="0">Hint<div class="tooltip-content">Used <a href="https://shields.io/badges/" target="_blank">Badgers from SHILDS.IO</a></div></span>
                 </label>
-                <textarea id="addedBadgesArea" rows="6" placeholder="Бейджи вашего проекта..."></textarea>
+                <textarea id="addedBadgesArea" rows="6" placeholder="Badges of your project..."></textarea>
             </div>
 
             <hr class="section-divider">
 
             <!-- Контейнер для динамических секций -->
-            <h3>Кастомные Секции</h3>
+            <h3>Custom Sections</h3>
             <div id="dynamicBlocksContainer">
                  <!-- Сюда добавляются блоки -->
             </div>
-            <button type="button" id="addSectionButton" class="button-add-section">Добавить Новую Секцию</button>
+            <button type="button" id="addSectionButton" class="button-add-section">Add A New Section</button>
 
             <hr class="section-divider">
 
             <!-- Лицензия -->
             <div class="form-group static-block">
-                 <label for="licenseText">Текст раздела Лицензия:</label>
-                 <input type="text" id="licenseText" placeholder="MIT / Смотрите бейдж выше / См. файл LICENSE">
+                 <label for="licenseText">The text of the License section:</label>
+                 <input type="text" id="licenseText" placeholder="MIT / See the badge above / See the LICENSE file">
              </div>
 
             <!-- Рекламный блок -->
@@ -124,21 +124,21 @@
 
             <!-- Кнопки -->
             <div class="action-buttons">
-                <button id="copyMdButton">Копировать Markdown</button>
-                <button id="downloadMdButton">Скачать .md</button>
+                <button id="copyMdButton">Copy Markdown</button>
+                <button id="downloadMdButton">Download .md</button>
             </div>
         </section>
 
         <!-- Preview Pane -->
         <section class="preview-pane">
-            <h2>Предпросмотр README.md</h2>
+            <h2>Preview README.md</h2>
             <div id="previewOutput" class="markdown-body"></div>
-             <h2>Сгенерированный Markdown</h2>
+             <h2>Generated Markdown</h2>
              <textarea id="rawMarkdownOutput" rows="15" readonly></textarea>
         </section>
     </main>
 
-    <footer> <p>Dynamic README Builder - Сделано с ❤️ и немного Gemini</p> <p><a style="color: #fff" href="https://t.me/b4dcat" target="_blank">B4DCAT</p> </footer>
+    <footer> <p>Dynamic README Builder - Made with ❤️ and a little Gemini</p> <p><a style="color: #fff" href="https://t.me/b4dcat" target="_blank">B4DCAT</p> </footer>
 
     <!-- === ШАБЛОН ДИНАМИЧЕСКОГО БЛОКА === -->
     <template id="dynamic-block-template">
@@ -149,11 +149,11 @@
                  <button type="button" class="remove-block" title="Удалить секцию">×</button>
              </div>
              <div class="form-group">
-                 <label>Заголовок секции (H2):</label>
+                 <label>Section heading (H2):</label>
                  <div class="title-group">
                      <!-- ЗАМЕНА input НА select ДЛЯ EMOJI -->
                      <select class="section-emoji" title="Выберите Emoji">
-                         <option value="">Нет</option>
+                         <option value="">No</option>
                          <option value="✨">✨ Sparkles</option>
                          <option value="🚀">🚀 Rocket</option>
                          <option value="💡">💡 Light Bulb</option>
@@ -181,56 +181,56 @@
                          <option value="🌍">🌍 Globe</option>
                          <!-- Добавьте другие релевантные emoji -->
                      </select>
-                     <input type="text" class="section-title" placeholder="Название секции">
+                     <input type="text" class="section-title" placeholder="Section name">
                  </div>
              </div>
              <div class="form-group">
-                 <label>Содержимое секции:
-                     <span class="tooltip-trigger" tabindex="0">Подсказка
+                 <label>Section Content:
+                     <span class="tooltip-trigger" tabindex="0">Hint
                          <!-- === ВОССТАНОВЛЕННЫЙ КОНТЕНТ ТУЛТИПА === -->
                          <div class="tooltip-content">
-                            <p><strong>Основы Markdown:</strong></p>
+                            <p><strong>The basics of Markdown:</strong></p>
                             <ul>
-                                <li><code>**Жирный текст**</code> → <strong>Жирный текст</strong></li>
-                                <li><code>*Курсив*</code> или <code>_Курсив_</code> → <em>Курсив</em></li>
-                                <li><code>~~Зачеркнутый~~</code> → <del>Зачеркнутый</del></li>
-                                <li><code>`Инлайн-код`</code> → <code>Инлайн-код</code></li>
-                                <li><code>[Текст ссылки](http://...)</code> → <a href="#" onclick="return false;">Текст ссылки</a></li>
-                                <li><code>![Alt текст](URL картинки)</code> → (Изображение)</li>
+                                <li><code>**Bold text**</code> → <strong>Bold text</strong></li>
+                                <li><code>*Italics*</code> или <code>_Italics_</code> → <em>Italics</em></li>
+                                <li><code>~~Crossed out~~</code> → <del>Crossed out</del></li>
+                                <li><code>`The inline code`</code> → <code>The inline code</code></li>
+                                <li><code>[Link text](http://...)</code> → <a href="#" onclick="return false;">Link text</a></li>
+                                <li><code>![Alt text](Image URL)</code> → (Image)</li>
                             </ul>
-                            <p><strong>Заголовки:</strong></p>
+                            <p><strong>Headlines:</strong></p>
                             <ul>
-                                <li><code>### Заголовок H3</code></li>
-                                <li><code>#### Заголовок H4</code> (и т.д. до H6)</li>
+                                <li><code>### The H3 heade</code></li>
+                                <li><code>#### The H4 heade</code> (etc. up to H6)</li>
                             </ul>
-                             <p><strong>Списки:</strong></p>
-                             <p><em>Маркированный:</em></p>
-                            <pre>*   Элемент 1
-*   Элемент 2
-    *   Вложенный (2 пробела)</pre>
-                             <p><em>Нумерованный:</em></p>
-                            <pre>1.  Первый элемент
-2.  Второй элемент</pre>
-                             <p><strong>Блоки кода (с подсветкой):</strong></p>
+                             <p><strong>Lists:</strong></p>
+                             <p><em>Labeled:</em></p>
+                            <pre>*   Element 1
+*   Element 2
+    *   Nested (2 spaces)</pre>
+                             <p><em>Numbered:</em></p>
+                            <pre>1.  The first element
+2.  The second element</pre>
+                             <p><strong>Code blocks (with backlight):</strong></p>
                              <pre>```javascript
 function greet() {
   console.log("Hello!");
 }
 ```</pre>
-                             <p><strong>Цитаты:</strong></p>
-                             <pre>> Это цитата.</pre>
-                             <p><strong>Горизонтальная линия:</strong></p>
+                             <p><strong>Quotes:</strong></p>
+                             <pre>> This is a quote.</pre>
+                             <p><strong>Horizontal line:</strong></p>
                              <pre>---</pre>
-                             <p><strong>Таблицы:</strong></p>
-                             <pre>| Заголовок 1 | Заголовок 2 |
+                             <p><strong>Tables:</strong></p>
+                             <pre>| Title 1 | Title 2 |
 | ----------- | ----------- |
-| Ячейка 1    | Ячейка 2    |
-| Ячейка 3    | Ячейка 4    |</pre>
+| Cell 1    | Cell 2    |
+| Cell 3    | Cell 4    |</pre>
                          </div>
                          <!-- === КОНЕЦ ВОССТАНОВЛЕННОГО КОНТЕНТА === -->
                      </span>
                  </label>
-                 <textarea class="section-content" rows="5" placeholder="Напишите здесь содержимое секции..."></textarea>
+                 <textarea class="section-content" rows="5" placeholder="Write the contents of the section here..."></textarea>
              </div>
         </div>
     </template>
