--- a/index.html
+++ b/index.html
@@ -7835,3 +7835,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
