test: add unit tests

--- a/index.html
+++ b/index.html
@@ -7829,3 +7829,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
