fix: update readme builder to use new template

--- a/utilities/readme-builder/index.html
+++ b/utilities/readme-builder/index.html
@@ -31,9 +31,10 @@ show_ads: false
 body_class: readme-generator-page utility-page
 
 # Если нужно добавить что-то уникальное в футер ТОЛЬКО для этой страницы
-footer_extra:README Generator v1.0 - Использует [Marked.js](https://marked.js.org/) и DOMPurify.
+footer_extra:
+    README Generator v1.0 - Использует [Marked.js](https://marked.js.org/) и DOMPurify.
 
-[B4DCAT](https://t.me/B4DCAT) \| [B4DCAT HUB](https://t.me/B4DCAT_HUB)
+    [B4DCAT](https://t.me/B4DCAT) \| [B4DCAT HUB](https://t.me/B4DCAT_HUB)
 author: Mr Vi
 ---
 <!-- --- Начало основного контента страницы (вставляется вместо {{ content }} в макете) --- -->
