--- a/utilities/readme-builder/index.html
+++ b/utilities/readme-builder/index.html
@@ -32,7 +32,7 @@ body_class: readme-generator-page utility-page
 
 # Если нужно добавить что-то уникальное в футер ТОЛЬКО для этой страницы
 footer_extra:
-    README Generator v1.0 - Использует [Marked.js](https://marked.js.org/) и DOMPurify.
+    README Generator v1.0 - Использует [Marked.js](https://marked.js.org/) и DOMPurify.\
 
     [B4DCAT](https://t.me/B4DCAT) \| [B4DCAT HUB](https://t.me/B4DCAT_HUB)
 author: Mr Vi
