--- a/utilities/readme-builder/index.html
+++ b/utilities/readme-builder/index.html
@@ -34,7 +34,7 @@ body_class: readme-generator-page utility-page
 footer_extra:
     README Generator v1.0 - Использует [Marked.js](https://marked.js.org/) и DOMPurify.\
 
-    [B4DCAT](https://t.me/B4DCAT) \| [B4DCAT HUB](https://t.me/B4DCAT_HUB)
+    [B4DCAT](https://t.me/B4DCAT){:target="_blank"} \| [B4DCAT HUB](https://t.me/B4DCAT_HUB){:target="_blank"}
 author: Mr Vi
 ---
 <!-- --- Начало основного контента страницы (вставляется вместо {{ content }} в макете) --- -->
