--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <ul>
                 <li><a href="/utilities">🚀 Утилиты</a></li>
                 <li><a href="/wiki">📚 Персональная Вики</a></li>
-                <li><a href="/task">📝 Задачи</a></li>
+                <li><a href="/tasks">📝 Задачи</a></li>
                 <li><a href="/projects">💡 Проекты</a></li>
                 <!-- Добавь сюда ссылки на твои разделы, когда они появятся -->
                 <!-- Пример: <li><a href="/utils/">🚀 Утилиты</a></li> -->
