--- a/utilities/stream-popup/index.html
+++ b/utilities/stream-popup/index.html
@@ -11,7 +11,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./src/css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
     <title>Генератор pop-up</title>
     
 </head>
