--- a/index.html
+++ b/index.html
@@ -7895,3 +7895,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
