feat: add new feature 2025-05-07

--- a/index.html
+++ b/index.html
@@ -7897,3 +7897,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
