--- a/index.html
+++ b/index.html
@@ -7899,3 +7899,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<!-- Enhanced user experience -->
