--- a/index.html
+++ b/index.html
@@ -7951,3 +7951,5 @@
 <!-- Improved accessibility -->
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
