--- a/index.html
+++ b/index.html
@@ -7955,3 +7955,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
