fix: resolve bug in function

--- a/index.html
+++ b/index.html
@@ -7953,3 +7953,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
