--- a/index.html
+++ b/index.html
@@ -7967,3 +7967,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<link rel="stylesheet" href="styles.css">
