docs: add inline comments

--- a/index.html
+++ b/index.html
@@ -7961,3 +7961,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
