--- a/index.html
+++ b/index.html
@@ -7963,3 +7963,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
