--- a/index.html
+++ b/index.html
@@ -7965,3 +7965,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
