--- a/index.html
+++ b/index.html
@@ -7957,3 +7957,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
