--- a/index.html
+++ b/index.html
@@ -7959,3 +7959,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
