docs: add inline comments

--- a/index.html
+++ b/index.html
@@ -7989,3 +7989,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
