docs: update documentation

--- a/index.html
+++ b/index.html
@@ -7987,3 +7987,5 @@
 <!-- Better SEO optimization -->
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
