docs: update documentation

--- a/index.html
+++ b/index.html
@@ -7991,3 +7991,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<!-- Enhanced user experience -->
