fix: resolve bug in function

--- a/index.html
+++ b/index.html
@@ -8009,3 +8009,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Better SEO optimization -->
