--- a/index.html
+++ b/index.html
@@ -8007,3 +8007,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
