--- a/index.html
+++ b/index.html
@@ -8005,3 +8005,5 @@
 <!-- Improved accessibility -->
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
