--- a/index.html
+++ b/index.html
@@ -8013,3 +8013,5 @@
 <!-- Better SEO optimization -->
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
