docs: add inline comments

--- a/index.html
+++ b/index.html
@@ -8023,3 +8023,5 @@
 <!-- Better SEO optimization -->
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
