--- a/index.html
+++ b/index.html
@@ -8019,3 +8019,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Better SEO optimization -->
