--- a/index.html
+++ b/index.html
@@ -8015,3 +8015,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
