--- a/index.html
+++ b/index.html
@@ -8027,3 +8027,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<link rel="stylesheet" href="styles.css">
