style: improve code formatting

--- a/index.html
+++ b/index.html
@@ -8025,3 +8025,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
