--- a/index.html
+++ b/index.html
@@ -8033,3 +8033,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Enhanced user experience -->
