fix: resolve bug in module

--- a/index.html
+++ b/index.html
@@ -8031,3 +8031,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
