fix: resolve bug in function

--- a/index.html
+++ b/index.html
@@ -8043,3 +8043,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
