--- a/index.html
+++ b/index.html
@@ -8041,3 +8041,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
