--- a/index.html
+++ b/index.html
@@ -8047,3 +8047,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
