--- a/index.html
+++ b/index.html
@@ -8065,3 +8065,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Enhanced user experience -->
