--- a/index.html
+++ b/index.html
@@ -8049,3 +8049,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
