--- a/index.html
+++ b/index.html
@@ -8053,3 +8053,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<script src="app.js"></script>
