docs: add inline comments

--- a/index.html
+++ b/index.html
@@ -8063,3 +8063,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
