--- a/index.html
+++ b/index.html
@@ -8051,3 +8051,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
