--- a/index.html
+++ b/index.html
@@ -8085,3 +8085,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
