--- a/index.html
+++ b/index.html
@@ -8091,3 +8091,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
