--- a/index.html
+++ b/index.html
@@ -8093,3 +8093,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
