--- a/index.html
+++ b/index.html
@@ -8095,3 +8095,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Enhanced user experience -->
