--- a/index.html
+++ b/index.html
@@ -8089,3 +8089,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
