--- a/index.html
+++ b/index.html
@@ -8087,3 +8087,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
