--- a/index.html
+++ b/index.html
@@ -8115,3 +8115,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
