--- a/index.html
+++ b/index.html
@@ -8119,3 +8119,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
