chore: update dependencies

--- a/index.html
+++ b/index.html
@@ -8117,3 +8117,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
