--- a/index.html
+++ b/index.html
@@ -8123,3 +8123,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<link rel="stylesheet" href="styles.css">
