--- a/index.html
+++ b/index.html
@@ -8121,3 +8121,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
