--- a/index.html
+++ b/index.html
@@ -8161,3 +8161,5 @@
 <script src="app.js"></script>
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
