--- a/index.html
+++ b/index.html
@@ -8163,3 +8163,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Enhanced user experience -->
