refactor: simplify logic

--- a/index.html
+++ b/index.html
@@ -8167,3 +8167,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
