--- a/index.html
+++ b/index.html
@@ -8171,3 +8171,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Improved accessibility -->
