--- a/index.html
+++ b/index.html
@@ -8175,3 +8175,5 @@
 <!-- Improved accessibility -->
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
