chore: update dependencies

--- a/index.html
+++ b/index.html
@@ -8179,3 +8179,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<!-- Better SEO optimization -->
