test: add unit tests

--- a/index.html
+++ b/index.html
@@ -8177,3 +8177,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
