--- a/index.html
+++ b/index.html
@@ -8169,3 +8169,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
