--- a/index.html
+++ b/index.html
@@ -8205,3 +8205,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
