docs: add inline comments

--- a/index.html
+++ b/index.html
@@ -8203,3 +8203,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
