--- a/index.html
+++ b/index.html
@@ -8207,3 +8207,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Enhanced user experience -->
