docs: add inline comments

--- a/index.html
+++ b/index.html
@@ -8219,3 +8219,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
