feat: add new feature 2025-06-04

--- a/index.html
+++ b/index.html
@@ -8243,3 +8243,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
