--- a/index.html
+++ b/index.html
@@ -8251,3 +8251,5 @@
 <meta name="description" content="Updated description">
 
 <script src="app.js"></script>
+
+<meta name="description" content="Updated description">
