refactor: improve code structure

--- a/index.html
+++ b/index.html
@@ -8247,3 +8247,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
