--- a/index.html
+++ b/index.html
@@ -8255,3 +8255,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<script src="app.js"></script>
