feat: add new feature 2025-06-06

--- a/index.html
+++ b/index.html
@@ -8275,3 +8275,5 @@
 <script src="app.js"></script>
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
