--- a/index.html
+++ b/index.html
@@ -8277,3 +8277,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Better SEO optimization -->
