--- a/index.html
+++ b/index.html
@@ -8283,3 +8283,5 @@
 <script src="app.js"></script>
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
