--- a/index.html
+++ b/index.html
@@ -8285,3 +8285,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
