--- a/index.html
+++ b/index.html
@@ -8287,3 +8287,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<script src="app.js"></script>
