--- a/index.html
+++ b/index.html
@@ -8293,3 +8293,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
