--- a/index.html
+++ b/index.html
@@ -8297,3 +8297,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
