--- a/index.html
+++ b/index.html
@@ -8313,3 +8313,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
