--- a/index.html
+++ b/index.html
@@ -8315,3 +8315,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<!-- Improved accessibility -->
