--- a/index.html
+++ b/index.html
@@ -8339,3 +8339,5 @@
 <script src="app.js"></script>
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
