fix: handle edge case

--- a/index.html
+++ b/index.html
@@ -8331,3 +8331,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <link rel="stylesheet" href="styles.css">
+
+<link rel="stylesheet" href="styles.css">
