--- a/index.html
+++ b/index.html
@@ -8343,3 +8343,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<script src="app.js"></script>
