--- a/index.html
+++ b/index.html
@@ -8341,3 +8341,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
