--- a/index.html
+++ b/index.html
@@ -8383,3 +8383,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
