feat: add new feature 2025-06-14

--- a/index.html
+++ b/index.html
@@ -8387,3 +8387,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Enhanced user experience -->
