--- a/index.html
+++ b/index.html
@@ -8385,3 +8385,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
