fix: handle edge case

--- a/index.html
+++ b/index.html
@@ -8417,3 +8417,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
