--- a/index.html
+++ b/index.html
@@ -8411,3 +8411,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
