--- a/index.html
+++ b/index.html
@@ -8419,3 +8419,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Better SEO optimization -->
