refactor: improve code structure

--- a/index.html
+++ b/index.html
@@ -8409,3 +8409,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
