refactor: improve code structure

--- a/index.html
+++ b/index.html
@@ -8435,3 +8435,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
