refactor: simplify logic

--- a/index.html
+++ b/index.html
@@ -8437,3 +8437,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Enhanced user experience -->
