--- a/index.html
+++ b/index.html
@@ -8441,3 +8441,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<script src="app.js"></script>
