--- a/index.html
+++ b/index.html
@@ -8443,3 +8443,5 @@
 <meta name="description" content="Updated description">
 
 <script src="app.js"></script>
+
+<meta name="description" content="Updated description">
