--- a/index.html
+++ b/index.html
@@ -8447,3 +8447,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Enhanced user experience -->
