--- a/index.html
+++ b/index.html
@@ -8469,3 +8469,5 @@
 <!-- Enhanced user experience -->
 
 <script src="app.js"></script>
+
+<meta name="description" content="Updated description">
