--- a/index.html
+++ b/index.html
@@ -8477,3 +8477,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
