test: add unit tests

--- a/index.html
+++ b/index.html
@@ -8473,3 +8473,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Enhanced user experience -->
