--- a/index.html
+++ b/index.html
@@ -8479,3 +8479,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<link rel="stylesheet" href="styles.css">
