--- a/index.html
+++ b/index.html
@@ -8475,3 +8475,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
