--- a/index.html
+++ b/index.html
@@ -8499,3 +8499,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
