--- a/index.html
+++ b/index.html
@@ -8491,3 +8491,5 @@
 <!-- Enhanced user experience -->
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
