--- a/index.html
+++ b/index.html
@@ -8495,3 +8495,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Better SEO optimization -->
