--- a/index.html
+++ b/index.html
@@ -8497,3 +8497,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
