fix: resolve QRCode library loading and function definition issues
- Move loadQRCodeFallback function definition before usage
- Add local qrcode.min.js library for reliability
- Improve error handling and fallback mechanisms
- Fix ReferenceError with undefined function calls
- Add better debugging and error messages

--- a/utilities/stream-qr/display.html
+++ b/utilities/stream-qr/display.html
@@ -10,9 +10,7 @@
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-TPQNM8CC');</script>   
-    <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.3/build/qrcode.min.js" onerror="loadQRCodeFallback()"></script>
-    <link rel="stylesheet" href="../stream-popup/css/main.css">
-    <link rel="stylesheet" href="./css/main.css">
+    
     <script>
         // Функция для загрузки альтернативной версии QRCode
         function loadQRCodeFallback() {
@@ -177,6 +175,10 @@
             });
         }
     </script>
+    
+    <script src="./js/qrcode.min.js" onerror="loadQRCodeFallback()"></script>
+    <link rel="stylesheet" href="../stream-popup/css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
     <h1 style="display: none;">QR-коды</h1>
