--- a/utilities/stream-qr/display.html
+++ b/utilities/stream-qr/display.html
@@ -176,7 +176,7 @@
         }
     </script>
     
-    <script src="./js/qrcode.min.js" onerror="loadQRCodeFallback()"></script>
+    <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.3/build/qrcode.min.js" onerror="loadQRCodeFallback()"></script>
     <link rel="stylesheet" href="../stream-popup/css/main.css">
     <link rel="stylesheet" href="./css/main.css">
 </head>
