feat: redesign landing page with modern light theme
- Replace dark theme with light gradient background
- Add CSS custom properties for consistent theming
- Update tsParticles configuration for better visual appeal
- Add features section with cards showcasing main utilities
- Improve typography and spacing
- Enhance mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -3,30 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>B4DCAT - Персональный Хаб</title>
-    <meta name="description" content="Персональный хаб с утилитами, вики, трекером задач и проектами">
-    <meta name="keywords" content="утилиты, вики, задачи, проекты, разработка, инструменты">
+    <title>B4DCAT - Персональный Хаб Разработчика</title>
+    <meta name="description" content="Персональный хаб с утилитами, вики, трекером задач и проектами. Коллекция веб-инструментов для разработчиков.">
+    <meta name="keywords" content="утилиты, вики, задачи, проекты, разработка, инструменты, CSS, JavaScript, веб-разработка">
     <meta name="author" content="Mr Vi">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://mrvi0.github.io/">
-    <meta property="og:title" content="B4DCAT - Персональный Хаб">
-    <meta property="og:description" content="Персональный хаб с утилитами, вики, трекером задач и проектами">
+    <meta property="og:title" content="B4DCAT - Персональный Хаб Разработчика">
+    <meta property="og:description" content="Персональный хаб с утилитами, вики, трекером задач и проектами. Коллекция веб-инструментов для разработчиков.">
     <meta property="og:image" content="https://mrvi0.github.io/assets/img/og-image.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://mrvi0.github.io/">
-    <meta property="twitter:title" content="B4DCAT - Персональный Хаб">
-    <meta property="twitter:description" content="Персональный хаб с утилитами, вики, трекером задач и проектами">
+    <meta property="twitter:title" content="B4DCAT - Персональный Хаб Разработчика">
+    <meta property="twitter:description" content="Персональный хаб с утилитами, вики, трекером задач и проектами. Коллекция веб-инструментов для разработчиков.">
     <meta property="twitter:image" content="https://mrvi0.github.io/assets/img/og-image.png">
 
     <!-- PWA Manifest -->
     <link rel="manifest" href="/manifest.json">
-    <meta name="theme-color" content="#000000">
+    <meta name="theme-color" content="#6366f1">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-mobile-web-app-title" content="B4DCAT">
     <link rel="apple-touch-icon" href="/assets/img/apple-touch-icon.png">
 
@@ -45,14 +45,14 @@
 
     <!-- Styles -->
     <link rel="stylesheet" href="/assets/css/landing.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Source+Code+Pro&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Source+Code+Pro:wght@400;600&display=swap" rel="stylesheet">
 
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
         (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
         m[i].l=1*new Date();
         for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
-        k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,f);
+        k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a);
         })(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
     
         ym(99850299, "init", {
@@ -84,9 +84,35 @@
             </ul>
         </nav>
 
+        <section class="features-animate">
+            <h2>Что вы найдете здесь:</h2>
+            <div class="features-grid">
+                <div class="feature-card">
+                    <div class="feature-icon">🎨</div>
+                    <h3>CSS Button Generator</h3>
+                    <p>Визуальный генератор CSS кнопок с настройкой всех параметров стиля</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">🌈</div>
+                    <h3>Colorify</h3>
+                    <p>Конвертер цветов между форматами HEX, RGB, HSL с генератором градиентов</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">📱</div>
+                    <h3>QR Generator</h3>
+                    <p>Генератор QR-кодов с настройкой размера и цвета</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">📋</div>
+                    <h3>Task Tracker</h3>
+                    <p>Kanban-доска для управления задачами с поддержкой GitHub</p>
+                </div>
+            </div>
+        </section>
+
         <footer class="footer-animate">
             <p>© 2025 Mr Vi. Сделано с ❤️ и кодом.</p>
-            <p><a href="https://github.com/mrvi0" target="_blank" rel="noopener noreferrer">GitHub</a></p>
+            <p><a href="https://github.com/mrvi0" target="_blank" rel="noopener noreferrer">GitHub</a> | <a href="https://t.me/B4DCAT" target="_blank" rel="noopener noreferrer">Telegram</a></p>
         </footer>
     </main>
 
