--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@ keywords: Mr Vi, developer, personal
             <div class="navigation">
                 <h3>Навигация:</h3>
                 <div class="nav-buttons">
-                    <a href="/about/" class="nav-button">👨‍💻 О себе</a>
-                    <a href="/projects/" class="nav-button">🚀 Проекты</a>
-                    <a href="/blog/" class="nav-button">📝 Блог</a>
-                    <a href="/contact/" class="nav-button">📞 Контакты</a>
+                    <a href="/about.html" class="nav-button">👨‍💻 О себе</a>
+                    <a href="/projects.html" class="nav-button">🚀 Проекты</a>
+                    <a href="/blog.html" class="nav-button">📝 Блог</a>
+                    <a href="/contact.html" class="nav-button">📞 Контакты</a>
                 </div>
             </div>
             
