--- a/404.html
+++ b/404.html
@@ -63,9 +63,9 @@ description: Страница не найдена
                 <span class="success">Доступные страницы:</span>
                 <div class="file-list">
                     <a href="/" class="file-item">🏠 /index.html</a>
-                    <a href="/about.html" class="file-item">👨‍💻 /about.html</a>
-                    <a href="/projects.html" class="file-item">🚀 /projects.html</a>
-                    <a href="/contact.html" class="file-item">📞 /contact.html</a>
+                    <a href="/about/" class="file-item">👨‍💻 /about/</a>
+                    <a href="/projects/" class="file-item">🚀 /projects/</a>
+                    <a href="/contact/" class="file-item">📞 /contact/</a>
                 </div>
             </div>
             
