refactor: remove emojis from 404 page
- Remove emojis from file list items
- Make 404 page more professional

--- a/404.html
+++ b/404.html
@@ -62,10 +62,10 @@ description: Страница не найдена
             <div class="output">
                 <span class="success">Доступные страницы:</span>
                 <div class="file-list">
-                    <a href="/" class="file-item">🏠 /index.html</a>
-                    <a href="/about/" class="file-item">👨‍💻 /about/</a>
-                    <a href="/projects/" class="file-item">🚀 /projects/</a>
-                    <a href="/contact/" class="file-item">📞 /contact/</a>
+                    <a href="/" class="file-item">/index.html</a>
+                    <a href="/about/" class="file-item">/about/</a>
+                    <a href="/projects/" class="file-item">/projects/</a>
+                    <a href="/contact/" class="file-item">/contact/</a>
                 </div>
             </div>
             
