--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@ keywords: Mr Vi, developer, personal
                 <h3>Навигация:</h3>
                 <div class="nav-buttons">
                     <a href="/about/" class="nav-button">О себе</a>
+                    <a href="/skills/" class="nav-button">Навыки</a>
                     <a href="/projects/" class="nav-button">Проекты</a>
                     <a href="/blog/" class="nav-button">Блог</a>
                     <a href="/contact/" class="nav-button">Контакты</a>
